@@ -62,6 +62,7 @@ import java.net.URISyntaxException;
 import java.time.Clock;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -375,7 +376,13 @@ public class JavaEntityClient implements EntityClient {
     return ValidationUtils.validateSearchResult(
         opContext,
         entitySearchService.search(
-            opContext, List.of(entity), input, newFilter(requestFilters), null, start, count),
+            opContext,
+            List.of(entity),
+            input,
+            newFilter(requestFilters),
+            Collections.emptyList(),
+            start,
+            count),
         entityService);
   }
 
@@ -406,7 +413,7 @@ public class JavaEntityClient implements EntityClient {
                 opContext.withSearchFlags(flags -> flags.setFulltext(false)),
                 entity,
                 newFilter(requestFilters),
-                null,
+                Collections.emptyList(),
                 start,
                 count)),
         entityService);
@@ -417,7 +424,7 @@ public class JavaEntityClient implements EntityClient {
    *
    * @param input search query
    * @param filter search filters
-   * @param sortCriterion sort criterion
+   * @param sortCriteria sort criteria
    * @param start start offset for search results
    * @param count max number of search results requested
    * @return Snapshot key
@@ -429,14 +436,14 @@ public class JavaEntityClient implements EntityClient {
       @Nonnull String entity,
       @Nonnull String input,
       @Nullable Filter filter,
-      @Nullable SortCriterion sortCriterion,
+      List<SortCriterion> sortCriteria,
       int start,
       int count)
       throws RemoteInvocationException {
     return ValidationUtils.validateSearchResult(
         opContext,
         entitySearchService.search(
-            opContext, List.of(entity), input, filter, sortCriterion, start, count),
+            opContext, List.of(entity), input, filter, sortCriteria, start, count),
         entityService);
   }
 
@@ -449,10 +456,10 @@ public class JavaEntityClient implements EntityClient {
       @Nullable Filter filter,
       int start,
       int count,
-      @Nullable SortCriterion sortCriterion)
+      List<SortCriterion> sortCriteria)
       throws RemoteInvocationException {
     return searchAcrossEntities(
-        opContext, entities, input, filter, start, count, sortCriterion, null);
+        opContext, entities, input, filter, start, count, sortCriteria, null);
   }
 
   /**
@@ -464,7 +471,7 @@ public class JavaEntityClient implements EntityClient {
    * @param start start offset for search results
    * @param count max number of search results requested
    * @param facets list of facets we want aggregations for
-   * @param sortCriterion sorting criterion
+   * @param sortCriteria sorting criteria
    * @return Snapshot key
    * @throws RemoteInvocationException when unable to execute request
    */
@@ -476,7 +483,7 @@ public class JavaEntityClient implements EntityClient {
       @Nullable Filter filter,
       int start,
       int count,
-      @Nullable SortCriterion sortCriterion,
+      List<SortCriterion> sortCriteria,
       @Nullable List<String> facets)
       throws RemoteInvocationException {
 
@@ -487,7 +494,7 @@ public class JavaEntityClient implements EntityClient {
             entities,
             input,
             filter,
-            sortCriterion,
+            sortCriteria,
             start,
             count,
             facets),
@@ -529,7 +536,7 @@ public class JavaEntityClient implements EntityClient {
       @Nullable String input,
       @Nullable Integer maxHops,
       @Nullable Filter filter,
-      @Nullable SortCriterion sortCriterion,
+      List<SortCriterion> sortCriteria,
       int start,
       int count)
       throws RemoteInvocationException {
@@ -543,7 +550,7 @@ public class JavaEntityClient implements EntityClient {
             input,
             maxHops,
             filter,
-            sortCriterion,
+            sortCriteria,
             start,
             count),
         entityService);
@@ -559,7 +566,7 @@ public class JavaEntityClient implements EntityClient {
       @Nullable String input,
       @Nullable Integer maxHops,
       @Nullable Filter filter,
-      @Nullable SortCriterion sortCriterion,
+      List<SortCriterion> sortCriteria,
       @Nullable String scrollId,
       @Nonnull String keepAlive,
       int count)
@@ -577,7 +584,7 @@ public class JavaEntityClient implements EntityClient {
             input,
             maxHops,
             filter,
-            sortCriterion,
+            sortCriteria,
             scrollId,
             keepAlive,
             count),
@@ -645,7 +652,7 @@ public class JavaEntityClient implements EntityClient {
       @Nonnull OperationContext opContext,
       @Nonnull String entity,
       @Nonnull Filter filter,
-      @Nullable SortCriterion sortCriterion,
+      List<SortCriterion> sortCriteria,
       int start,
       int count)
       throws RemoteInvocationException {
@@ -655,7 +662,7 @@ public class JavaEntityClient implements EntityClient {
             opContext.withSearchFlags(flags -> flags.setFulltext(true)),
             entity,
             filter,
-            sortCriterion,
+            sortCriteria,
             start,
             count),
         entityService);
